--- a/src/components/MapPercentChartsData/MapPercentChartsData.scss
+++ b/src/components/MapPercentChartsData/MapPercentChartsData.scss
@@ -1,14 +1,4 @@
 .div-map-all {
-  // display: flex;
-  // height: 700px;
-  // margin-top: 40px;
-
-  // position: absolute;
-  // width: 100%;
-  // height: 100%;
-  // position: relative;
-  // outline: 2px red solid;
-
   svg path[fill^="none"] {
     stroke-width: 0px;
   }
@@ -108,7 +98,7 @@
 
 .data-table {
   margin-top: 40px;
-  // outline: 2px red solid;
+
   * {
     margin: 0;
     padding: 0;
@@ -118,7 +108,7 @@
   .container-header {
     display: flex;
     align-items: center;
-    // outline: 2px red solid;
+
     border-bottom: 2px solid #b6b6b673;
     padding-bottom: 16px;
     .title {
@@ -177,7 +167,6 @@
           margin-right: 8px;
         }
       }
-      // outline: 2px red solid;
     }
   }
   .row-data-drone-table {
@@ -218,6 +207,20 @@
       padding: 3px;
       border-radius: 4px;
     }
+    .percent-not-specified-box {
+      margin-left: 8px;
+      width: 66px;
+      min-width: 60px;
+      text-align: center;
+
+      color: #646464;
+      background: #eeeeee;
+      font-family: "Inter";
+      font-weight: 600;
+      font-size: 11px;
+      padding: 3px;
+      border-radius: 4px;
+    }
   }
   .row-data-drone-table:hover {
     background: #f5f5f8;
@@ -227,16 +230,6 @@
   }
 }
 .div-map-all {
-  // display: flex;
-  // height: 700px;
-  // margin-top: 40px;
-
-  // position: absolute;
-  // width: 100%;
-  // height: 100%;
-  // position: relative;
-  // outline: 2px red solid;
-
   svg path[fill^="none"] {
     stroke-width: 0px;
   }
@@ -336,7 +329,7 @@
 
 .data-table {
   margin-top: 40px;
-  // outline: 2px red solid;
+
   * {
     margin: 0;
     padding: 0;
@@ -346,7 +339,7 @@
   .container-header {
     display: flex;
     align-items: center;
-    // outline: 2px red solid;
+
     border-bottom: 2px solid #b6b6b673;
     padding-bottom: 16px;
     .title {
@@ -405,7 +398,6 @@
           margin-right: 8px;
         }
       }
-      // outline: 2px red solid;
     }
   }
   .row-data-drone-table {
