--- a/src/components/MapPercentChartsData/MapPercentChartsData.scss
+++ b/src/components/MapPercentChartsData/MapPercentChartsData.scss
@@ -1,101 +1,3 @@
-.div-map-all {
-  svg path[fill^="none"] {
-    stroke-width: 0px;
-  }
-  svg path {
-    stroke-width: 0.5px;
-
-    //   fill-opacity:0.8;
-    //   stroke-opacity:0.9;
-    //   fill:purple;
-    stroke: white;
-  }
-  text {
-    fill: black;
-    font-family: "Kanit";
-    font-weight: 300;
-    font-size: 13px;
-  }
-
-  svg path:hover {
-    // fill:red;
-    stroke: white;
-    stroke-width: 3px;
-    &:hover {
-      -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
-      filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
-    }
-  }
-}
-.div-map-la {
-  //    background: red;
-  // padding: 20px;
-  // max-width: 100%!important;
-  // height: auto;
-  // display: block;
-
-  //  z-index: 1;
-  // position: relative;
-  svg path[fill^="none"] {
-    stroke-width: 0px;
-  }
-  svg path {
-    stroke-width: 0.5px;
-
-    //   fill-opacity:0.8;
-    //   stroke-opacity:0.9;
-    //   fill:purple;
-    stroke: black;
-  }
-  text {
-    fill: black;
-    font-family: "Kanit";
-    font-weight: 300;
-    font-size: 13px;
-  }
-
-  svg path:hover {
-    // fill:red;
-    stroke: white;
-    stroke-width: 3px;
-    &:hover {
-      -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
-      filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
-    }
-  }
-}
-
-.div-map-kh {
-  // position: relative;
-  svg path[fill^="none"] {
-    stroke-width: 0px;
-  }
-  svg path {
-    stroke-width: 0.5px;
-
-    //   fill-opacity:0.8;
-    //   stroke-opacity:0.9;
-    //   fill:purple;
-    stroke: black;
-  }
-  text {
-    fill: black;
-    font-family: "Kanit";
-    font-weight: 300;
-    font-size: 13px;
-  }
-
-  svg path:hover {
-    // fill:red;
-    stroke: white;
-    stroke-width: 3px;
-    &:hover {
-      -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
-      filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
-    }
-  }
-}
-
 .data-table {
   margin-top: 40px;
 
@@ -359,7 +261,14 @@
         .box-data-0 {
           width: 20px;
           height: 12px;
-          background: #eaebea;
+          // background: #eaebea;
+          border-radius: 2px;
+          margin-right: 8px;
+        }
+        .box-sample-percent {
+          width: 20px;
+          height: 12px;
+          // background: #eaebea;
           border-radius: 2px;
           margin-right: 8px;
         }
@@ -372,28 +281,28 @@
         .box-data-25 {
           width: 20px;
           height: 12px;
-          background: #b2e8cb;
+          // background: #b2e8cb;
           border-radius: 2px;
           margin-right: 8px;
         }
         .box-data-50 {
           width: 20px;
           height: 12px;
-          background: #5cd295;
+          // background: #5cd295;
           border-radius: 2px;
           margin-right: 8px;
         }
         .box-data-75 {
           width: 20px;
           height: 12px;
-          background: #1abf69;
+          // background: #1abf69;
           border-radius: 2px;
           margin-right: 8px;
         }
         .box-data-100 {
           width: 20px;
           height: 12px;
-          background: #17834a;
+          // background: #17834a;
           border-radius: 2px;
           margin-right: 8px;
         }
